--- a/JuniorFactory.Lesson6.Frontend/JuniorFactory.Lesson6.SimpleSiteMvc/Views/Workers/Test222.cshtml
+++ b/JuniorFactory.Lesson6.Frontend/JuniorFactory.Lesson6.SimpleSiteMvc/Views/Workers/Test222.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-@model JuniorFactory.Lesson6.Models.Workers.PrivaceModel
+@model JuniorFactory.Lesson6.SimpleSiteMvc.Models.Workers.PrivaceModel
 @{
     var person = Model;
 }
